plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.ceos18'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.mysql:mysql-connector-j'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'

	// Swagger 3.0.0
	//	spring-doc
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	// modelmapper
	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.4.4'

	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0'


}

tasks.named('test') {
	useJUnitPlatform()
}
